# RealityRecurses

./: CONTRIBUTING.md  LICENSE  README.md  audit_100_report.json  pyproject.toml  theory.md
docs/: DIAGRAMS.md  METRICS.md  PR_QUALITY_GATES.md
scripts/: audit.py  benchmarks.py  pr_gate.py  run_simulation.py
src/reality_recurses/: __init__.py  agent.py  architecture.py  baselines.py  causal_engine.py  defaults.py  divergent_engine.py  information_physics.py  thermodynamic_memory.py  toy_env.py
src/reality_recurses.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/reality_scaler/: __init__.py  agent.py  architecture.py  baselines.py  causal_engine.py  defaults.py  divergent_engine.py  information_physics.py  thermodynamic_memory.py  toy_env.py
tests/: test_all.py  test_audit_smoke.py  test_benchmarks.py  test_validation_audit_contract.py
