[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reality-recurses"
version = "1.0.0"
description = "Physical Reality as a Scaling Substrate for AGI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.scripts]
reality-recurses = "reality_recurses.agent:run_simulation"
reality-scaler = "reality_scaler.agent:run_simulation"
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
